--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "helmet": "^5.1.1",
     "http-errors": "~1.6.3",
     "mongoose": "^6.5.2",
     "morgan": "~1.9.1"
