--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "helmet": "^5.1.1",
     "http-errors": "~1.6.3",
     "mongoose": "^6.5.2",
     "morgan": "~1.9.1"
-  },
-  "devDependencies": {
-    "dotenv": "^16.0.1"
   }
 }
